--- a/Usuario Administrador TI/assets/css/estilos_p1.css
+++ b/Usuario Administrador TI/assets/css/estilos_p1.css
@@ -7,25 +7,20 @@
     src: url('../fonts/Montserrat-VariableFont_wght.ttf');
 }
 
-/* Estilos globales */
 * {
     margin: 0;
     padding: 0;
     font-family: Nunito;
 }
 
-/* Configuración de desplazamiento suave en el HTML */
 html {
     scroll-behavior: smooth;
-    
 }
 
-/* Ocultar la barra de desplazamiento horizontal */
 body {
     overflow-x: hidden;
 }
 
-/* Variables de colores */
 :root {
     --color1: #000000;
     --color2: #FFFCF1;
@@ -35,7 +30,6 @@ body {
     --color6: #7d9c9e;
 }
 
-/* Ocultar el menú en pantallas más pequeñas */
 .menu-hidden {
     display: none;
 }
@@ -45,16 +39,14 @@ body {
 }
 
 .menu-icon {
-    display: none ;
+    display: none;
 }
 
-/* Estilos para las imágenes */
 img {
     max-width: 100%;
     height: auto;
 }
 
-/* Fuentes personalizadas */
 @font-face {
     font-family: Titulo;
     src: url('../fonts/BebasNeue.ttf');
@@ -65,7 +57,6 @@ img {
     src: url('../fonts/Louis-George.ttf');
 }
 
-/* Estilos de navegación */
 nav {
     position: fixed;
     top: 0;
@@ -79,7 +70,6 @@ nav {
     z-index: 2;
 }
 
-/* Estilos del encabezado */
 header {
     width: 100vw;
     height: 100vh;
@@ -89,7 +79,6 @@ header {
     background-size: 100vw 100vh;
 }
 
-/* Estilos de secciones */
 section {
     width: 100vw;
     height: 100vh;
@@ -98,10 +87,8 @@ section {
     align-items: center;
 }
 
-/* Estilos para secciones específicas */
 #home {
     position: relative;
-    /* Asegura que el encabezado tenga una posición distinta de "static" */
 }
 
 #Gimnasios,
@@ -116,7 +103,6 @@ section {
     text-align: center;
 }
 
-
 #Sobre\ nosotros {
     background: url(../img/Fondo4.png) no-repeat center;
     background-size: cover;
@@ -125,17 +111,15 @@ section {
     align-items: center;
     text-align: center;
 }
+
 #Gimnasios {
     background: url(../img/fondo3.png) no-repeat center;
-    
 }
+
 #Horarios {
     background: url(../img/Fondo4.png) no-repeat center;
-    
 }
 
-
-/* Estilos para los artículos */
 article {
     width: 50vw;
     height: 100vh;
@@ -146,7 +130,6 @@ article {
     text-align: justify;
 }
 
-/* Estilos para el carrusel */
 #EfectoCarrusel {
     width: 50vw;
     height: 60vh;
@@ -156,22 +139,17 @@ article {
     overflow: hidden;
 }
 
-/* Estilos del contenido dentro del carrusel */
 .carousel-inner {
     text-align: center;
-    /* Alinea el contenido horizontalmente en el centro */
 }
 
-/* Estilos de las imágenes dentro del carrusel */
 .carousel-inner img {
     max-width: 70%;
     max-height: 70%;
     margin: auto;
-    /* Centra la imagen horizontal y verticalmente */
     border-radius: 20%;
 }
 
-/* Estilos para la segunda división de navegación */
 .div-nav-2 {
     width: 90vw;
     height: 10vh;
@@ -180,7 +158,6 @@ article {
     justify-content: right;
 }
 
-/* Estilos para las listas y elementos de navegación */
 ul,
 li {
     list-style-type: none;
@@ -193,16 +170,15 @@ li {
     font-weight: bold;
 }
 
-/* Estilos del menú de navegación */
 .oc-menu {
     display: block;
 }
 
-/* Estilos para títulos y texto */
 .div-nav-1 h1 {
     user-select: none;
 }
-.imagen_logo{
+
+.imagen_logo {
     margin-left: 15px;
 }
 
@@ -231,13 +207,10 @@ h2 {
     text-align: center;
     color: var(--color2);
     line-height: 1.1;
-    /* Ajusta este valor para aumentar el espacio entre líneas */
     font-family: Head;
     font-size: 140%;
 }
 
-
-/* Estilos para el encabezado izquierdo y derecho */
 .izq-header,
 .der-header {
     width: 100vw;
@@ -247,17 +220,14 @@ h2 {
     align-items: center;
 }
 
-/* Estilos para los enlaces */
 .enlaces {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
 }
 
-/* Estilos para los botones */
 .boton {
     margin: 10px auto;
-    /* Centra el botón horizontalmente */
     padding: 4px;
     background: var(--color3);
     border-radius: 40px;
@@ -278,12 +248,10 @@ h2 {
     background: var(--color5);
 }
 
-/* Estilos para el botón de inicio de sesión */
 .login {
     padding-right: 20px;
 }
 
-/* Estilos para el contenedor de superposición superior */
 .overlaytop-container {
     position: fixed;
     top: 10vh;
@@ -294,14 +262,12 @@ h2 {
     z-index: 2;
 }
 
-/* Estilos para la superposición superior */
 .overlay-top {
     width: 100%;
     height: 15px;
     z-index: 1;
 }
 
-/* Estilos para el contenedor de superposición inferior */
 .overlaybottom-container {
     position: absolute;
     bottom: 0;
@@ -311,14 +277,12 @@ h2 {
     width: 102%;
 }
 
-/* Estilos para la superposición inferior */
 .overlay-bottom {
     width: 102%;
     height: 15px;
     z-index: 1;
 }
 
-/* Estilos para el enlace activo en el menú */
 .op-menu a.activo {
     color: var(--color3);
     border: 2px solid;
@@ -326,23 +290,15 @@ h2 {
     padding: 5px 10px;
 }
 
-/* Estilos para el contenedor B */
 .contB {
     display: none;
 }
 
-
-/* Gimnasios */
-
-
-
-/* Estilos para el título de la sección */
 .section-title {
     text-align: center;
     margin-bottom: 10px;
 }
 
-/* Estilos para el título h3 */
 h3 {
     font-size: 4em;
     color: var(--color3);
@@ -351,16 +307,14 @@ h3 {
     font-family: Titulo;
 }
 
-/* Estilos para el párrafo parrafo2 */
 .parrafo2 {
     text-align: center;
     color: var(--color1);
-    line-height: 1.1; /* Ajusta este valor para aumentar el espacio entre líneas */
+    line-height: 1.1;
     font-family: Head;
     font-size: 140%;
 }
 
-/* Estilos para el contenedor principal container */
 .container {
     display: flex;
     flex-direction: row;
@@ -370,7 +324,6 @@ h3 {
     position: relative;
 }
 
-/* Estilos para los contenedores internos "item-container" */
 .item-container {
     text-align: center;
     background-color: var(--color3);
@@ -389,7 +342,6 @@ h3 {
     transform: translateY(-7px);
 }
 
-/* Estilos para los títulos h4 en "item-container" */
 .item-container h4 {
     color: var(--color2);
     margin-top: 15%;
@@ -401,13 +353,11 @@ h3 {
     font-size: 30px;
 }
 
-/* Estilos para los logos dentro de los contenedores */
 .container-logo {
     margin-top: 25px;
     margin-bottom: 25px;
 }
 
-/* Estilos para el párrafo parrafo3 */
 .parrafo3 {
     margin-top: 25px;
     text-align: center;
@@ -416,29 +366,25 @@ h3 {
     font-family: Head;
 }
 
-/* Estilos para el párrafo parrafo3 en "item-container" */
 .item-container .parrafo3 {
     font-size: 110%;
 }
 
-/* Estilos de enlaces */
 a {
     color: var(--color1);
     text-decoration: none;
 }
 
-.a1{
+.a1 {
     color: var(--color2);
     text-decoration: none;
 }
-
 
 a:hover {
     color: var(--color3);
     text-decoration: none;
 }
 
-/* Estilos para el botón boton2 */
 .boton2 {
     margin: 10px auto;
     margin-top: 20%;
@@ -462,15 +408,6 @@ a:hover {
     text-decoration: underline;
 }
 
-
-
-
-
-/* Acceder*/
-
-
-
-/* Estilos para los campos de entrada con los IDs nombre, email y ci */
 #nombre,
 #email,
 #ci {
@@ -481,11 +418,10 @@ a:hover {
     outline: none;
     width: 30vw;
     height: 4vh;
-    margin-bottom: -10px; /* Ajusta el margen inferior según tus necesidades */
+    margin-bottom: -10px;
     color: rgb(58, 58, 58);
 }
 
-/* Estilos para el contenedor principal containerCD */
 .containerCD {
     width: 100vw;
     height: 100vh;
@@ -496,16 +432,14 @@ a:hover {
     align-items: center;
 }
 
-/* Estilos para los contenedores internos containerC y containerD */
 .containerC,
 .containerD {
     display: flex;
     flex-direction: column;
     align-items: left;
-    margin: 10vw; /* Ajusta el margen según tus necesidades */
+    margin: 10vw;
 }
 
-/* Estilos para el contenedorD */
 .containerD {
     color: var(--color3);
     border: 2px solid;
@@ -513,25 +447,21 @@ a:hover {
     padding: 40px;
 }
 
-
-/* Estilos para las etiquetas dentro de containerD */
 .containerD label {
     margin-top: 3vh;
-    margin-bottom: 3vh; /* Ajusta el margen superior e inferior según tus necesidades */
+    margin-bottom: 3vh;
 }
 
-/* Estilos para los campos de entrada dentro de containerD */
 .containerD input {
     width: 100%;
-    margin-bottom: 2vh; /* Ajusta el margen inferior entre los campos de entrada */
+    margin-bottom: 2vh;
 }
 
 .containerD select {
     width: 100%;
-    margin-bottom: 2vh; /* Ajusta el margen inferior entre los campos de entrada */
+    margin-bottom: 2vh;
 }
 
-/* Estilos para el botón boton3 */
 .boton3 {
     margin: 10px auto;
     padding: 4px;
@@ -550,11 +480,6 @@ a:hover {
     color: var(--color4);
 }
 
-
-
-  /*Sobre nosotros*/
-
-/* Estilos para el contenedorE */
 .containerE {
     display: flex;
     position: relative;
@@ -562,7 +487,6 @@ a:hover {
     align-items: center;
 }
 
-/* Estilos para los elementos en item-containerC */
 .item-containerC {
     position: relative;
     width: 20vw;
@@ -572,10 +496,9 @@ a:hover {
     overflow: hidden;
     cursor: pointer;
     border-radius: 40px;
-    margin-top:3vh; /* Agregado un margen superior */
+    margin-top: 3vh;
 }
 
-/* Estilos específicos para novedad1 */
 #novedad1 {
     background-image: url('../img/img_muestra/img/iocno2.png');
     background-size: 50%;
@@ -584,7 +507,6 @@ a:hover {
     margin-top: 20px;
 }
 
-/* Estilos específicos para novedad2 */
 #novedad2 {
     background-image: url('../img/img_muestra/img/iocno3.png');
     background-size: 50%;
@@ -593,7 +515,6 @@ a:hover {
     margin-top: 20px;
 }
 
-/* Estilos específicos para novedad3 */
 #novedad3 {
     background-image: url('../img/img_muestra/img/iocno4.png');
     background-size: 50%;
@@ -601,7 +522,6 @@ a:hover {
     background-position: center center;
 }
 
-/* Estilos para el párrafo5 dentro de item-containerC */
 .parrafo5 {
     position: absolute;
     top: 0;
@@ -618,14 +538,12 @@ a:hover {
     font-weight: bold;
 }
 
-/* Estilos para hover en novedad1, novedad2 y novedad3 */
 #novedad1:hover,
 #novedad2:hover,
 #novedad3:hover {
     background-image: none;
 }
 
-/* Estilos para el párrafo6 dentro de item-containerC */
 .parrafo6 {
     position: absolute;
     width: 100%;
@@ -638,7 +556,6 @@ a:hover {
     font-size: 140%;
 }
 
-/* Estilos para mostrar y ocultar los párrafos al hacer hover en item-containerC */
 .item-containerC:hover .parrafo5 {
     opacity: 1;
     background-image: none;
@@ -649,7 +566,7 @@ a:hover {
 }
 
 .overlaybottom-container2 {
-margin-top: auto;
+    margin-top: auto;
     bottom: 0;
     left: 0;
     display: flex;
@@ -657,24 +574,23 @@ margin-top: auto;
     width: 100%;
 }
 
-/* Estilos para la superposición inferior */
 .overlay-bottom2 {
-    width: 100%; /* Cambiado a 100% para evitar desbordamientos */
+    width: 100%;
     height: 15px;
     z-index: 1;
 }
 
 .horarios-container {
-    display: flex; /* Usar flexbox para alinear elementos en fila */
-    justify-content: flex-start; /* Alinear elementos al inicio del contenedor */
-    align-items: flex-start; /* Alinear elementos en la parte superior */
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     padding: 20px;
-    gap: 20px; /* Espacio entre el formulario y la tabla */
+    gap: 20px;
 }
 
 .user-form-container {
-    flex: 0 0 30%; /* El formulario ocupa el 30% del ancho */
+    flex: 0 0 30%;
     background-color: var(--color2);
     padding: 20px;
     border-radius: 10px;
@@ -684,11 +600,11 @@ margin-top: auto;
 
 .user-form {
     display: flex;
-    flex-direction: column; /* Alinear el formulario en una columna */
+    flex-direction: column;
 }
 
 .user-form .form-group {
-    margin-bottom: 15px; /* Espacio entre los campos del formulario */
+    margin-bottom: 15px;
 }
 
 .user-form label {
@@ -700,7 +616,7 @@ margin-top: auto;
 .user-form input,
 .user-form select,
 .user-form button {
-    width: 100%; /* El input y el botón ocupan todo el ancho */
+    width: 100%;
     padding: 10px;
     font-family: Head;
     font-size: 1em;
@@ -723,46 +639,45 @@ margin-top: auto;
 }
 
 .user-list-container {
-    flex: 1; /* La tabla ocupa el resto del espacio disponible */
+    flex: 1;
 }
 
 .horarios-table {
-    width: 80%; /* La tabla ocupa todo el ancho del contenedor */
+    width: 80%;
     border-collapse: collapse;
     background-color: var(--color2);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     overflow: hidden;
 }
-.tablajeje{
+
+.tablajeje {
     color: var(--color3);
 }
 
-.tituloo{
-        font-size: 3em;
-        color: var(--color3);
-        text-align: center;
-        font-family: Head;
-        font-weight: bold;
-    
+.tituloo {
+    font-size: 3em;
+    color: var(--color3);
+    text-align: center;
+    font-family: Head;
+    font-weight: bold;
 }
 
-/* Estilos para el modal */
 .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1000; 
+    display: none;
+    position: fixed;
+    z-index: 1000;
     left: 0;
     top: 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    overflow: auto; 
-    background-color: rgba(0, 0, 0, 0.5); 
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 10% auto; 
+    margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 30%;
@@ -771,7 +686,6 @@ margin-top: auto;
     position: relative;
 }
 
-/* Botón de cerrar el modal */
 .close-button {
     color: #aaa;
     position: absolute;
@@ -789,7 +703,6 @@ margin-top: auto;
     cursor: pointer;
 }
 
-/* Estilos para botones en la tabla */
 button {
     padding: 5px 10px;
     font-family: Head;
@@ -815,6 +728,7 @@ button.delete-button {
 button:hover {
     opacity: 0.8;
 }
+
 #editForm {
     display: flex;
     flex-direction: column;
@@ -841,7 +755,7 @@ button:hover {
     border: 1px solid var(--color1);
     border-radius: 5px;
     width: 100%;
-    box-sizing: border-box; /* Para que el padding no expanda el input fuera de su contenedor */
+    box-sizing: border-box;
 }
 
 #editForm button {
@@ -861,15 +775,12 @@ button:hover {
     background-color: var(--color5);
 }
 
-/* Para asegurar la alineación del contenido */
 .modal-content h3 {
     font-family: Head;
     color: var(--color3);
     text-align: center;
     margin-bottom: 20px;
 }
-
-
 
 .container {
     display: flex;
@@ -880,7 +791,6 @@ button:hover {
     position: relative;
 }
 
-/* Estilos para los contenedores internos "item-container" */
 .item-container {
     text-align: center;
     background-color: var(--color3);
@@ -899,7 +809,6 @@ button:hover {
     transform: translateY(-7px);
 }
 
-/* Estilos para los títulos h4 en "item-container" */
 .item-container h4 {
     color: var(--color2);
     margin-top: 15%;
@@ -911,7 +820,6 @@ button:hover {
     font-size: 30px;
 }
 
-/* Estilos para el párrafo parrafo3 */
 .parrafo3 {
     margin-top: 25px;
     text-align: center;
@@ -920,7 +828,6 @@ button:hover {
     font-family: Head;
 }
 
-/* Estilos para el párrafo parrafo3 en "item-container" */
 .item-container .parrafo3 {
     font-size: 110%;
 }
@@ -936,7 +843,6 @@ button:hover {
     font-size: 110%;
 }
 
-/* Estilos de enlaces */
 a {
     color: var(--color1);
     text-decoration: none;
@@ -952,7 +858,6 @@ a:hover {
     text-decoration: none;
 }
 
-/* Estilos para el botón boton2 */
 .boton2 {
     margin: 10px auto;
     margin-top: 10%;
@@ -976,7 +881,6 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Estilos para el botón boton23 */
 .boton23 {
     margin: 10px auto;
     margin-top: 20%;
@@ -1000,20 +904,17 @@ a:hover {
     text-decoration: underline;
 }
 
-
-/* Contenedor Principal para la Gestión de Deportes */
 #deportes-container {
-    display: flex; /* Usar flexbox para alinear elementos en fila */
-    justify-content: flex-start; /* Alinear elementos al inicio del contenedor */
-    align-items: flex-start; /* Alinear elementos en la parte superior */
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     padding: 20px;
-    gap: 20px; /* Espacio entre el formulario y la lista de deportes */
+    gap: 20px;
 }
 
-/* Estilos para el Formulario de Deporte */
 #formulario-deporte {
-    flex: 0 0 30%; /* El formulario ocupa el 30% del ancho */
+    flex: 0 0 30%;
     background-color: var(--color2);
     padding: 20px;
     border-radius: 10px;
@@ -1024,7 +925,7 @@ a:hover {
 
 #deporte-form {
     display: flex;
-    flex-direction: column; /* Alinear el formulario en una columna */
+    flex-direction: column;
 }
 
 #deporte-form label {
@@ -1036,7 +937,7 @@ a:hover {
 #deporte-form input,
 #deporte-form textarea,
 #deporte-form button {
-    width: 100%; /* Los inputs y el botón ocupan todo el ancho */
+    width: 100%;
     padding: 10px;
     font-family: Head;
     font-size: 1em;
@@ -1058,39 +959,35 @@ a:hover {
     background-color: var(--color5);
 }
 
-/* Estilos para la Lista de Deportes */
 #lista-deportes {
-    flex: 1; /* La lista de deportes ocupa el resto del espacio disponible */
+    flex: 1;
     background-color: var(--color2);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    max-height: 600px; /* Altura máxima para mantener un contenedor manejable */
-    overflow-y: auto; /* Habilitar el desplazamiento vertical si es necesario */
-    width: 100%; /* Ocupar todo el ancho disponible */
-    box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
+    max-height: 600px;
+    overflow-y: auto;
+    width: 100%;
+    box-sizing: border-box;
     margin-left: 5%;
 }
 
-/* Título de la lista de deportes */
 #lista-deportes h3 {
-    margin: 0 0 15px 0; /* Margen inferior para separar el título de la lista */
+    margin: 0 0 15px 0;
     font-family: Titulo;
-    color: var(--color3); /* Color de título */
+    color: var(--color3);
 }
 
-/* Contenedor de la lista de deportes con CSS Grid */
 #deportes-list {
-    list-style-type: none; /* Eliminar estilo de lista */
+    list-style-type: none;
     padding: 0;
     margin: 0;
-    width: 100%; /* Asegurar que los elementos hijos ocupen todo el ancho */
-    display: grid; /* Usar Grid para organizar los elementos */
-    grid-template-columns: repeat(4, 1fr); /* Crear 4 columnas de igual ancho */
-    gap: 10px; /* Espacio entre los elementos de la lista */
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
-/* Estilo de cada elemento de la lista */
 #deportes-list li {
     padding: 10px;
     background-color: var(--color4);
@@ -1098,8 +995,8 @@ a:hover {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    width: 100%; /* Asegurar que cada elemento ocupe todo su contenedor */
-    box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #deportes-list li:hover {
@@ -1116,7 +1013,6 @@ a:hover {
     gap: 20px;
 }
 
-/* Estilos para la Configuración de Alertas */
 #configuracion-alertas {
     flex: 0 0 40%;
     background-color: var(--color2);
@@ -1162,18 +1058,18 @@ a:hover {
 #alertas-form button:hover {
     background-color: var(--color5);
 }
-/* Estilos para la Tabla de Alertas */
+
 #lista-alertas {
     flex: 1;
     background-color: var(--color2);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    max-height: 600px; /* Altura máxima para mantener un contenedor manejable */
+    max-height: 600px;
     margin-right: 5%;
-    overflow-y: auto; /* Habilitar el desplazamiento vertical si es necesario */
-    width: 100%; /* Ocupar todo el ancho disponible */
-    box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
+    overflow-y: auto;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #alertas-table {
