--- a/usuario cliente/usuario cliente/assets/css/estilos_p1.css
+++ b/usuario cliente/usuario cliente/assets/css/estilos_p1.css
@@ -7,25 +7,20 @@
     src: url('../fonts/Montserrat-VariableFont_wght.ttf');
 }
 
-/* Estilos globales */
 * {
     margin: 0;
     padding: 0;
     font-family: Nunito;
 }
 
-/* Configuración de desplazamiento suave en el HTML */
 html {
     scroll-behavior: smooth;
-    
 }
 
-/* Ocultar la barra de desplazamiento horizontal */
 body {
     overflow-x: hidden;
 }
 
-/* Variables de colores */
 :root {
     --color1: #000000;
     --color2: #FFFCF1;
@@ -35,7 +30,6 @@ body {
     --color6: #7d9c9e;
 }
 
-/* Ocultar el menú en pantallas más pequeñas */
 .menu-hidden {
     display: none;
 }
@@ -45,16 +39,14 @@ body {
 }
 
 .menu-icon {
-    display: none ;
+    display: none;
 }
 
-/* Estilos para las imágenes */
 img {
     max-width: 100%;
     height: auto;
 }
 
-/* Fuentes personalizadas */
 @font-face {
     font-family: Titulo;
     src: url('../fonts/BebasNeue.ttf');
@@ -65,7 +57,6 @@ img {
     src: url('../fonts/Louis-George.ttf');
 }
 
-/* Estilos de navegación */
 nav {
     position: fixed;
     top: 0;
@@ -79,7 +70,6 @@ nav {
     z-index: 2;
 }
 
-/* Estilos del encabezado */
 header {
     width: 100vw;
     height: 100vh;
@@ -89,7 +79,6 @@ header {
     background-size: 100vw 100vh;
 }
 
-/* Estilos de secciones */
 section {
     width: 100vw;
     height: 100vh;
@@ -98,10 +87,8 @@ section {
     align-items: center;
 }
 
-/* Estilos para secciones específicas */
 #home {
     position: relative;
-    /* Asegura que el encabezado tenga una posición distinta de "static" */
 }
 
 #Acceder,
@@ -115,7 +102,6 @@ section {
     text-align: center;
 }
 
-
 #Sobre\ nosotros {
     background: url(../img/Fondo4.png) no-repeat center;
     background-size: cover;
@@ -125,38 +111,37 @@ section {
     text-align: center;
 }
 
-
 #Gimnasios {
     background-color: var(--color2);
     background-size: cover;
     display: flex;
-    justify-content: space-between; /* Asegura que los contenedores se distribuyan en el espacio */
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     background: url(../img/fondo3.png) no-repeat center;
-    height: 100vh; /* Ajusta la altura del contenedor al 100% de la ventana */
-    padding: 20px; /* Añade algo de padding si es necesario */
-    position: relative; /* Esto permite que los contenedores se posicionen absolutamente */
+    height: 100vh;
+    padding: 20px;
+    position: relative;
 }
 
 .dashboard-section {
     background-color: var(--color2);
     position: absolute;
     left: 0;
-    width: 50%;  /* Ancho del contenedor */
-    height: 80%; /* Ocupa el 80% del alto de la sección */
-    padding: 10px; /* Añadir un pequeño padding si es necesario */
-    box-sizing: border-box; /* Asegura que el padding no afecte al tamaño total */
+    width: 50%;
+    height: 80%;
+    padding: 10px;
+    box-sizing: border-box;
     display: flex;
-    flex-direction: column; /* Organiza las tarjetas en columnas */
-    justify-content: space-between; /* Espacia las filas verticalmente */
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .dashboard-container {
     margin-left: 10%;
     display: flex;
     justify-content: space-between;
-    height: 48%; /* Ocupa la mitad de la altura del contenedor para cada fila */
+    height: 48%;
     width: 100%;
 }
 
@@ -165,22 +150,21 @@ section {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
-    width: 48%;  /* Ancho de cada tarjeta */
+    width: 48%;
     text-align: center;
-border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
-
+    border: 1px solid var(--color3);
 }
 
 .dashboard-card h3 {
     font-family: 'Titulo', sans-serif;
     color: var(--color3);
     margin-bottom: 10px;
-    font-size: 1em; /* Ajusta el tamaño de la fuente */
+    font-size: 1em;
 }
 
 .dashboard-card canvas {
     width: 100% !important;
-    height: 80% !important; /* Fija una altura más pequeña para el gráfico */
+    height: 80% !important;
 }
 
 .container-right-top-gimnasio {
@@ -188,7 +172,7 @@ border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
     height: 40%;
     position: absolute;
     right: 10%;
-    top: 10%; /* Ajusta la posición desde la parte superior */
+    top: 10%;
 }
 
 .container-right-bottom-gimnasio {
@@ -196,9 +180,8 @@ border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
     height: 40%;
     position: absolute;
     right: 10%;
-    bottom: 5%; /* Ajusta la posición desde la parte inferior */
+    bottom: 5%;
 }
-
 
 #muscle-strength-table {
     width: 80%;
@@ -207,7 +190,7 @@ border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     overflow: hidden;
-    margin: 0 auto; /* Centrar la tabla horizontalmente */
+    margin: 0 auto;
 }
 
 #muscle-strength-table thead {
@@ -223,13 +206,13 @@ border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
 
 #muscle-strength-table th {
     font-size: 1.2em;
-    font-family: 'Titulo', sans-serif; /* Asegúrate de tener la fuente 'Titulo' disponible */
+    font-family: 'Titulo', sans-serif;
     color: var(--color3);
 }
 
 #muscle-strength-table td {
     font-size: 1em;
-    font-family: 'Head', sans-serif; /* Asegúrate de tener la fuente 'Head' disponible */
+    font-family: 'Head', sans-serif;
     color: var(--color1);
     font-weight: bold;
 }
@@ -246,14 +229,10 @@ border: 1px solid var(--color3); /* Añade un borde azul de 2px de grosor */
     background-color: var(--color2);
 }
 
-
 #Horarios {
     background: url(../img/Fondo4.png) no-repeat center;
-    
 }
 
-
-/* Estilos para los artículos */
 article {
     width: 50vw;
     height: 100vh;
@@ -264,7 +243,6 @@ article {
     text-align: justify;
 }
 
-/* Estilos para el carrusel */
 #EfectoCarrusel {
     width: 50vw;
     height: 60vh;
@@ -274,22 +252,17 @@ article {
     overflow: hidden;
 }
 
-/* Estilos del contenido dentro del carrusel */
 .carousel-inner {
     text-align: center;
-    /* Alinea el contenido horizontalmente en el centro */
 }
 
-/* Estilos de las imágenes dentro del carrusel */
 .carousel-inner img {
     max-width: 70%;
     max-height: 70%;
     margin: auto;
-    /* Centra la imagen horizontal y verticalmente */
     border-radius: 20%;
 }
 
-/* Estilos para la segunda división de navegación */
 .div-nav-2 {
     width: 90vw;
     height: 10vh;
@@ -298,7 +271,6 @@ article {
     justify-content: right;
 }
 
-/* Estilos para las listas y elementos de navegación */
 ul,
 li {
     list-style-type: none;
@@ -311,16 +283,15 @@ li {
     font-weight: bold;
 }
 
-/* Estilos del menú de navegación */
 .oc-menu {
     display: block;
 }
 
-/* Estilos para títulos y texto */
 .div-nav-1 h1 {
     user-select: none;
 }
-.imagen_logo{
+
+.imagen_logo {
     margin-left: 15px;
 }
 
@@ -349,13 +320,10 @@ h2 {
     text-align: center;
     color: var(--color2);
     line-height: 1.1;
-    /* Ajusta este valor para aumentar el espacio entre líneas */
     font-family: Head;
     font-size: 140%;
 }
 
-
-/* Estilos para el encabezado izquierdo y derecho */
 .izq-header,
 .der-header {
     width: 100vw;
@@ -365,17 +333,14 @@ h2 {
     align-items: center;
 }
 
-/* Estilos para los enlaces */
 .enlaces {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
 }
 
-/* Estilos para los botones */
 .boton {
     margin: 10px auto;
-    /* Centra el botón horizontalmente */
     padding: 4px;
     background: var(--color3);
     border-radius: 40px;
@@ -396,12 +361,10 @@ h2 {
     background: var(--color5);
 }
 
-/* Estilos para el botón de inicio de sesión */
 .login {
     padding-right: 20px;
 }
 
-/* Estilos para el contenedor de superposición superior */
 .overlaytop-container {
     position: fixed;
     top: 10vh;
@@ -412,14 +375,12 @@ h2 {
     z-index: 2;
 }
 
-/* Estilos para la superposición superior */
 .overlay-top {
     width: 100%;
     height: 15px;
     z-index: 1;
 }
 
-/* Estilos para el contenedor de superposición inferior */
 .overlaybottom-container {
     position: absolute;
     bottom: 0;
@@ -429,14 +390,12 @@ h2 {
     width: 102%;
 }
 
-/* Estilos para la superposición inferior */
 .overlay-bottom {
     width: 102%;
     height: 15px;
     z-index: 1;
 }
 
-/* Estilos para el enlace activo en el menú */
 .op-menu a.activo {
     color: var(--color3);
     border: 2px solid;
@@ -444,23 +403,15 @@ h2 {
     padding: 5px 10px;
 }
 
-/* Estilos para el contenedor B */
 .contB {
     display: none;
 }
 
-
-/* Gimnasios */
-
-
-
-/* Estilos para el título de la sección */
 .section-title {
     text-align: center;
     margin-bottom: 10px;
 }
 
-/* Estilos para el título h3 */
 h3 {
     font-size: 4em;
     color: var(--color3);
@@ -469,16 +420,14 @@ h3 {
     font-family: Titulo;
 }
 
-/* Estilos para el párrafo parrafo2 */
 .parrafo2 {
     text-align: center;
     color: var(--color1);
-    line-height: 1.1; /* Ajusta este valor para aumentar el espacio entre líneas */
+    line-height: 1.1;
     font-family: Head;
     font-size: 140%;
 }
 
-/* Estilos para el contenedor principal container */
 .container {
     display: flex;
     flex-direction: row;
@@ -488,7 +437,6 @@ h3 {
     position: relative;
 }
 
-/* Estilos para los contenedores internos "item-container" */
 .item-container {
     text-align: center;
     background-color: var(--color3);
@@ -507,7 +455,6 @@ h3 {
     transform: translateY(-7px);
 }
 
-/* Estilos para los títulos h4 en "item-container" */
 .item-container h4 {
     color: var(--color2);
     margin-top: 15%;
@@ -519,13 +466,11 @@ h3 {
     font-size: 30px;
 }
 
-/* Estilos para los logos dentro de los contenedores */
 .container-logo {
     margin-top: 25px;
     margin-bottom: 25px;
 }
 
-/* Estilos para el párrafo parrafo3 */
 .parrafo3 {
     margin-top: 25px;
     text-align: center;
@@ -534,29 +479,25 @@ h3 {
     font-family: Head;
 }
 
-/* Estilos para el párrafo parrafo3 en "item-container" */
 .item-container .parrafo3 {
     font-size: 110%;
 }
 
-/* Estilos de enlaces */
 a {
     color: var(--color1);
     text-decoration: none;
 }
 
-.a1{
+.a1 {
     color: var(--color2);
     text-decoration: none;
 }
-
 
 a:hover {
     color: var(--color3);
     text-decoration: none;
 }
 
-/* Estilos para el botón boton2 */
 .boton2 {
     margin: 10px auto;
     margin-top: 20%;
@@ -580,7 +521,6 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Estilos para los campos de entrada con los IDs nombre, email y ci */
 #nombre,
 #email,
 #ci {
@@ -591,11 +531,10 @@ a:hover {
     outline: none;
     width: 30vw;
     height: 4vh;
-    margin-bottom: -10px; /* Ajusta el margen inferior según tus necesidades */
+    margin-bottom: -10px;
     color: rgb(58, 58, 58);
 }
 
-/* Estilos para el contenedor principal containerCD */
 .containerCD {
     width: 100vw;
     height: 100vh;
@@ -606,15 +545,13 @@ a:hover {
     align-items: center;
 }
 
-/* Estilos para los contenedores internos containerC y containerD */
 .containerC {
     display: flex;
     flex-direction: column;
     align-items: left;
-    margin: 10vw; /* Ajusta el margen según tus necesidades */
+    margin: 10vw;
 }
 
-/* Estilos para el contenedorD */
 .containerD {
     color: var(--color3);
     border: 2px solid;
@@ -622,25 +559,21 @@ a:hover {
     padding: 40px;
 }
 
-
-/* Estilos para las etiquetas dentro de containerD */
 .containerD label {
     margin-top: 3vh;
-    margin-bottom: 3vh; /* Ajusta el margen superior e inferior según tus necesidades */
+    margin-bottom: 3vh;
 }
 
-/* Estilos para los campos de entrada dentro de containerD */
 .containerD input {
     width: 100%;
-    margin-bottom: 2vh; /* Ajusta el margen inferior entre los campos de entrada */
+    margin-bottom: 2vh;
 }
 
 .containerD select {
     width: 100%;
-    margin-bottom: 2vh; /* Ajusta el margen inferior entre los campos de entrada */
+    margin-bottom: 2vh;
 }
 
-/* Estilos para el botón boton3 */
 .boton3 {
     margin: 10px auto;
     padding: 4px;
@@ -659,11 +592,6 @@ a:hover {
     color: var(--color4);
 }
 
-
-
-  /*Sobre nosotros*/
-
-/* Estilos para el contenedorE */
 .containerE {
     display: flex;
     position: relative;
@@ -671,7 +599,6 @@ a:hover {
     align-items: center;
 }
 
-/* Estilos para los elementos en item-containerC */
 .item-containerC {
     position: relative;
     width: 20vw;
@@ -681,12 +608,9 @@ a:hover {
     overflow: hidden;
     cursor: pointer;
     border-radius: 40px;
-    margin-top:3vh; /* Agregado un margen superior */
-    
+    margin-top: 3vh;
 }
 
-
-/* Estilos específicos para novedad1 */
 #novedad1 {
     background-image: url('../img/img_muestra/img/iocno2.png');
     background-size: 50%;
@@ -695,7 +619,6 @@ a:hover {
     margin-top: 20px;
 }
 
-/* Estilos específicos para novedad2 */
 #novedad2 {
     background-image: url('../img/img_muestra/img/iocno3.png');
     background-size: 50%;
@@ -704,7 +627,6 @@ a:hover {
     margin-top: 20px;
 }
 
-/* Estilos específicos para novedad3 */
 #novedad3 {
     background-image: url('../img/img_muestra/img/iocno4.png');
     background-size: 50%;
@@ -712,7 +634,6 @@ a:hover {
     background-position: center center;
 }
 
-/* Estilos para el párrafo5 dentro de item-containerC */
 .parrafo5 {
     position: absolute;
     top: 0;
@@ -729,14 +650,12 @@ a:hover {
     font-weight: bold;
 }
 
-/* Estilos para hover en novedad1, novedad2 y novedad3 */
 #novedad1:hover,
 #novedad2:hover,
 #novedad3:hover {
     background-image: none;
 }
 
-/* Estilos para el párrafo6 dentro de item-containerC */
 .parrafo6 {
     position: absolute;
     width: 100%;
@@ -749,7 +668,6 @@ a:hover {
     font-size: 140%;
 }
 
-/* Estilos para mostrar y ocultar los párrafos al hacer hover en item-containerC */
 .item-containerC:hover .parrafo5 {
     opacity: 1;
     background-image: none;
@@ -760,7 +678,7 @@ a:hover {
 }
 
 .overlaybottom-container2 {
-margin-top: auto;
+    margin-top: auto;
     bottom: 0;
     left: 0;
     display: flex;
@@ -768,9 +686,8 @@ margin-top: auto;
     width: 100%;
 }
 
-/* Estilos para la superposición inferior */
 .overlay-bottom2 {
-    width: 100%; /* Cambiado a 100% para evitar desbordamientos */
+    width: 100%;
     height: 15px;
     z-index: 1;
 }
@@ -856,7 +773,6 @@ margin-top: auto;
     background-color: var(--color2);
 }
 
-/* Estilo para el formulario de identificación */
 .formulario {
     display: flex;
     flex-direction: column;
@@ -994,14 +910,13 @@ margin-top: auto;
     height: 100vh;
 }
 
-/* Contenedor principal */
 .container-custom {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr 1fr;
     gap: 10px;
-    width: 80%; /* Ajusta el ancho según tus necesidades */
-    max-width: 1200px; /* Limita el ancho máximo */
+    width: 80%;
+    max-width: 1200px;
     height: 500px;
     padding: 20px;
     box-sizing: border-box;
@@ -1009,21 +924,19 @@ margin-top: auto;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-
-/* Estilos para la sección de la izquierda arriba */
 .arriba-izquierda {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative; /* Asegura que la imagen se posicione dentro de este contenedor */
+    position: relative;
 }
 
 .animacion {
-    position: absolute; /* Esto permite mover la imagen */
+    position: absolute;
     animation: mover-arriba-abajo 3s ease-in-out infinite;
-    z-index: 10; /* Asegura que la imagen esté en un nivel superior */
+    z-index: 10;
 }
 
 @keyframes mover-arriba-abajo {
@@ -1038,8 +951,6 @@ margin-top: auto;
     }
 }
 
-
-/* Estilos para la sección de la izquierda abajo */
 .abajo-izquierda {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
@@ -1048,7 +959,6 @@ margin-top: auto;
     justify-content: center;
 }
 
-/* Estilos para la sección de la derecha */
 .derecha {
     background-color: var(--color2);
     grid-column: 2 / 3;
@@ -1061,7 +971,6 @@ margin-top: auto;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-/* Estilos para el botón */
 .boton-custom {
     padding: 10px 20px;
     background-color: var(--color3);
@@ -1078,13 +987,11 @@ margin-top: auto;
     background-color: var(--color5);
 }
 
-/* Estilos para el párrafo */
 .parrafo-custom {
     font-size: 30px;
     color: var(--color3);
     line-height: 1.5;
     text-align: justify;
     font-family: Head;
-    font-weight:bolder;
+    font-weight: bolder;
 }
-
